Bugfix: Changed `overflow-y: scroll` to `auto`.

--- a/planning_poker/static/planning_poker/css/poker.css
+++ b/planning_poker/static/planning_poker/css/poker.css
@@ -190,7 +190,7 @@ nav .participants-list .participants-tooltip ul li span.muted {
 
 .votes-overview {
     grid-column: 1 / 3;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .votes-overview .vote {
